force-app/main/default/objects/Transportation__c/fields/TruckType__c.field-meta.xml
<CustomField>
    <fullName>TruckType__c</fullName>
    <label>Truck Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TruckType</valueSetName>
    </valueSet>
</CustomField>