force-app/main/default/objects/Transportation__c/fields/WarehouseArrivalDate__c.field-meta.xml
<CustomField>
    <fullName>WarehouseArrivalDate__c</fullName>
    <label>Warehouse Arrival Date</label>
    <type>DateTime</type>
</CustomField>