force-app/main/default/objects/Transportation__c/fields/WarehouseDeparturedDate__c.field-meta.xml
<CustomField>
    <fullName>WarehouseDeparturedDate__c</fullName>
    <label>Warehouse Departured Date</label>
    <type>DateTime</type>
</CustomField>