force-app/main/default/objects/Transportation__c/recordTypes/Import.recordType-meta.xml
<RecordType>
    <fullName>Import</fullName>
    <active>true</active>
    <description>XQC, NQC, NKD</description>
    <label>Import</label>
</RecordType>