force-app/main/default/objects/Transportation__c/validationRules/LockRecordAfterCancellation.validationRule-meta.xml
<ValidationRule>
    <fullName>LockRecordAfterCancellation</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE(Lock__c)=True</errorConditionFormula>
    <errorMessage>You can not edit because this record is cancelled.</errorMessage>
</ValidationRule>