force-app/main/default/objects/Transportation__c/validationRules/valid_date.validationRule-meta.xml
<ValidationRule>
    <fullName>valid_date</fullName>
    <active>true</active>
    <errorConditionFormula>Pick_up_date__c  &gt;  Delivery_Date__c</errorConditionFormula>
    <errorMessage>Wrong time, please choose a suitable time.</errorMessage>
</ValidationRule>